--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -30,7 +30,12 @@
         "back": "பின்னால்",
         "delete": "அழி",
         "delete_confirm": "இந்த பயிரை அழிக்க விரும்புகிறீர்களா? இதை மாற்ற முடியாது.",
-        "day": "நாள்"
+        "day": "நாள்",
+        "difficulty": {
+            "easy": "எளிது",
+            "medium": "சாதாரணமானது",
+            "hard": "கடினமானது"
+        }
     },
     "home": {
         "activity_command": "செயல்பாட்டு கட்டளை",
@@ -190,5 +195,112 @@
         "step_4_desc": "ஒளி மற்றும் நீர் பாய்ச்சவும்",
         "step_5": "அறுவடை",
         "step_5_desc": "வெட்டி மகிழுங்கள்!"
+    },
+    "seeds": {
+        "labels": {
+            "leaves_color": "இலைகளின் நிறம்",
+            "stem_color": "தண்டின் நிறம்",
+            "configure_growth": "வளர்ச்சியை அமைத்தல்",
+            "dynamic_scaling": "திறன்மிகு மாற்றங்கள்",
+            "expert_advice": "நிபுணர் ஆலோசனை",
+            "fert_guide": "உர வழிகாட்டி",
+            "pro_tip": "சிறந்த உதவிக்குறிப்பு",
+            "todays_action": "இன்றைய செயல்பாடு",
+            "full_timeline": "முழு வளர்ச்சி காலவரிசை",
+            "progression": "முன்னேற்றம்",
+            "timeline_preview": "காலவரிசை முன்னோட்டம்",
+            "dark": "இருள்",
+            "light": "ஒளி",
+            "resources": "ஆதாரங்கள்",
+            "start_growing": "{{name}} வளர்க்கத் தொடங்கு",
+            "blackout_phase": "இருண்ட நிலை - நாள் {{day}}",
+            "light_phase": "ஒளி நிலை - நாள் {{day}}",
+            "harvest_day": "அறுவடை நாள்!",
+            "timetable": "வளர்ச்சி கால அட்டவணை",
+            "prep_title": "தயார் செய்தல்",
+            "prep_soak_title": "தயார் செய்தல் மற்றும் ஊறவைத்தல்",
+            "prep_desc": "ஈரமான ஊடகத்தில் விதைகளை நேரடியாக விதைக்கவும்.",
+            "soak_desc": "விதைப்பதற்கு முன் விதைகளை {{hours}} மணிநேரம் ஊறவைக்கவும்.",
+            "blackout_desc": "முழுமையான இருட்டில் வைக்கவும். தினமும் இருமுறை தண்ணீர் தெளிக்கவும்.",
+            "light_desc": "பிரகாசமான ஒளியில் வைக்கவும். தொடர்ந்து தினமும் 2 முறை தெளிக்கவும்.",
+            "harvest_desc": "உங்கள் முளைகீரை தயார்! அறுவடை செய்து மகிழுங்கள்."
+        },
+        "taste_label": "சுவை",
+        "nutrition_label": "ஊட்டச்சத்து நன்மைகள்",
+        "care_guide_label": "விரிவான பராமரிப்பு வழிகாட்டி",
+        "pros_label": "பொருத்தமானது",
+        "cons_label": "குறைபாடுகள்",
+        "tags": {
+            "mild": "மிதமான",
+            "fresh": "புதிய",
+            "crunchy": "மொறுமொறுப்பான",
+            "spicy": "காரமான",
+            "sweet": "இனிப்பு",
+            "earthy": "மண் வாசனை",
+            "nutty": "கொட்டை போன்ற சுவை"
+        },
+        "amaranth": {
+            "name": "அரைக்கீரை (Amaranth)",
+            "nutrition": "வைட்டமின்கள் A, C, E, மற்றும் K நிறைந்தது. கால்சியம் மற்றும் இரும்புச்சத்து அதிகம்.",
+            "care": "மிகை நீர் பாசனத்தைத் தவிர்க்கவும். தண்டுகள் வலுவாக இருக்க பிளாக்அவுட் நிலையைத் தொடரவும். ஊறவைக்கத் தேவையில்லை.",
+            "pros": "அனைத்து மண் வகைகளுக்கும் ஏற்றது. வேகமாக வளரும்.",
+            "cons": "அதிகப்படியான வெப்பத்திற்கு உணர்திறன் கொண்டது.",
+            "fert": "பயிற்களின் நிறத்தை (betacyanin) அதிகரிக்க 5-ஆம் நாளில் குறைந்த நைட்ரஜன் கொண்ட பயிர் ஊக்கியைப் பயன்படுத்தவும்.",
+            "tips": "அதிகப்படியான நனைப்பிற்கு மிகவும் உணர்திறன் கொண்டது; நுனித் தெளிப்பானை (fine mist) மட்டுமே பயன்படுத்தவும். தண்டுகள் வலுவாக வளர பிளாக்அவுட் நிலையை எடையுடன் தொடரவும். ஊறவைக்க வேண்டாம்."
+        },
+        "radish": {
+            "name": "முள்ளங்கி (Radish)",
+            "nutrition": "செரிமானத்திற்கு உதவும் நொதிகள் மற்றும் ஆக்ஸிஜனேற்றிகள் நிறைந்தது.",
+            "care": "வேகமாக வளரும், 5-ம் நாளிலிருந்து கவனிக்கவும். காரமான சுவைக்கு சீக்கிரம் அறுவடை செய்யவும்.",
+            "pros": "ஆரம்பநிலையினருக்கு மிகவும் எளிது.",
+            "cons": "அதிக தண்ணீர் இருந்தால் வேர் அழுகல் ஏற்படலாம்.",
+            "fert": "வேகமான வேர் வளர்ச்சிக்கு 3-ஆம் நாளில் திரவக் கடல்பாசி சாற்றைப் பயன்டுத்தவும்.",
+            "tips": "மிகவும் வேகமாக வளரும்; 5-ஆம் நாளிலிருந்து உன்னிப்பாகக் கவனிக்கவும். சீக்கிரம் அறுவடை செய்வது காரமான சுவையைத் தக்கவைக்கும். ஊறவைக்கத் தேவையில்லை."
+        },
+        "broccoli": {
+            "name": "புரோக்கோலி (Broccoli)",
+            "nutrition": "சல்போராபேன் நிறைந்தது, இது புற்றுநோய்க்கு எதிரான பண்புகளைக் கொண்டது.",
+            "care": "அதிக ஒளி தேவை. முதல் உண்மை இலை வரும்போது அறுவடை செய்யவும்.",
+            "pros": "அதிக ஊட்டச்சத்து மதிப்பு.",
+            "cons": "சீரான ஈரப்பதம் தேவை.",
+            "fert": "சமநிலைப்படுத்தப்பட்ட கடல் சார்ந்த உரத்தை 4-ஆம் நாளுக்குப் பிறகு 25% அளவில் பயன்படுத்தவும்.",
+            "tips": "அதிக ஒளி தேவை; தண்டு நீண்டு மெலிந்து போவதைத் தவிர்க்க 16-இலிருந்து 18 மணிநேரம் LED ஒளி வழங்கவும். முதல் உண்மை இலை வரும்போது அறுவடை செய்யவும். ஊறவைக்க வேண்டாம்."
+        },
+        "pea-shoots": {
+            "name": "பட்டாணி முளைகள் (Pea Shoots)",
+            "nutrition": "புரதம் மற்றும் வைட்டமின் A, C நிறைந்தது.",
+            "care": "8-12 மணிநேரம் ஊறவைக்கவும். வேர்கள் வலுவாக இருக்க கனமான எடையைப் பயன்படுத்தவும்.",
+            "pros": "இனிமையான சுவை, குழந்தைகள் விரும்புவார்கள்.",
+            "cons": "ஊறவைத்தல் கட்டாயமானது.",
+            "fert": "ஊறவைக்கும் நீரில் செழுமையான உரம் கலந்த நீரைப் பயன்படுத்தவும். அதன் பிறகு பொதுவாக தானாகவே வளரும்.",
+            "tips": "8-12 மணிநேரம் ஊறவைக்கவும். வேர்கள் வலுவாக ஊன்ற 3-4 நாட்களுக்கு 2-4 கிலோ எடையைப் பயன்படுத்தவும். சுருள் கொடிகள் தோன்றும் போது அறுவடை செய்யவும்."
+        },
+        "sunflower": {
+            "name": "சூரியகாந்தி (Sunflower)",
+            "nutrition": "ஆரோக்கியமான கொழுப்புகள் மற்றும் புரதம் நிறைந்தது.",
+            "care": "8-12 மணிநேரம் ஊறவைக்கவும். விதைகள் உதிர்வதை எளிதாக்க மூடியைப் பயன்படுத்தவும்.",
+            "pros": "பெரிய இலைகள், அதிக மகசூல்.",
+            "cons": "விதை உமி நீக்குவது கடினமாக இருக்கலாம்.",
+            "fert": "விதை உமி எளிதாக நீங்க 4-ஆம் நாளில் கால்சியம்-மெக்னீசியம் சப்ளிமெண்ட்டைப் பயன்படுத்தவும்.",
+            "tips": "8-12 மணிநேரம் ஊறவைக்கவும். உமிகளை நீக்க பிளாக்அவுட் நிலையின் போது தட்டுகளை அடுக்கி வைக்கவும் (stacking). உமிகள் எளிதாக நீங்க தினமும் தண்ணீர் தெளிக்கவும்."
+        },
+        "beetroot": {
+            "name": "பீட்ரூட் (Beetroot)",
+            "nutrition": "இரத்த ஓட்டத்தை மேம்படுத்த உதவும் நைட்ரேட்டுகள் நிறைந்தது.",
+            "care": "8-12 மணிநேரம் ஊறவைக்கவும். விதைகள் கொத்தாக இருப்பதால் சற்று இடைவெளி விட்டு விதைக்கவும்.",
+            "pros": "அழகான சிவப்பு நிறம், சாலட்டிற்கு ஏற்றது.",
+            "cons": "வளர்வதற்கு அதிக நேரம் எடுக்கும்.",
+            "fert": "5-ஆம் நாளில் போரான் (Boron) கலந்த நீரைப் பாய்ச்சுவது பெரிய விளைச்சலில் 'பிளாக் ஹார்ட்' பாதிப்பைத் தடுக்கும்.",
+            "tips": "விதைகள் பல முளைகளைக் கொண்டவை; எனவே சற்று இடைவெளி விட்டு விதைக்கவும். விதைப்பதற்கு முன் 8-12 மணிநேரம் இளஞ்சூடான நீரில் ஊறவைக்கவும்."
+        },
+        "red-amaranthus": {
+            "name": "சிவப்பு அரக்கீரை (Red Amaranth)",
+            "nutrition": "அதிக இரும்புச்சத்து, வைட்டமின் சி, மற்றும் ஆக்ஸிஜனேற்றிகள் நிறைந்தது. இரத்த சோகையைத் தடுக்கும்.",
+            "care": "மிகை நீர் பாசனத்தைத் தவிர்க்கவும். 2-3 நாட்கள் பிளாக்அவுட் செய்யவும். அறுவடை நாள் 12.",
+            "pros": "ஊட்டச்சத்து மிக்கது, சாலட்டுகளுக்கு மிகச்சிறந்தது.",
+            "cons": "அதிக தண்ணீர் இருந்தால் வேர் அழுகல் ஏற்படலாம்.",
+            "fert": "பயிற்களின் நிறத்தை (betacyanin) அதிகரிக்க 5-ஆம் நாளில் குறைந்த நைட்ரஜன் கொண்ட பயிர் ஊக்கியைப் பயன்படுத்தவும்.",
+            "tips": "அதிகப்படியான நனைப்பிற்கு மிகவும் உணர்திறன் கொண்டது; நுனித் தெளிப்பானை (fine mist) மட்டுமே பயன்படுத்தவும். தண்டுகள் வலுவாக வளர பிளாக்அவுட் நிலையை எடையுடன் தொடரவும். ஊறவைக்க வேண்டாம்."
+        }
     }
 }
